argo-workflows/overlays/production/server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
spec:
  selector:
    matchLabels:
      app: argo-server
  template:
    metadata:
      labels:
        app: argo-server
    spec:
      containers:
      - args:
        - server
        - --secure=false
        image: quay.io/argoproj/argocli:latest
        name: argo-server
...
