argo-workflows/overlays/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
  labels:
    app.kubernetes.io/instance: argo-workflows
  name: argo-server
  namespace: argo
spec:
  ports:
  - name: http-web
    port: 2746
  selector:
    app: argo-server
