argo-workflows/overlays/production/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argo-workflows-gateway 
  namespace: argo
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - argo-workflows.tradersclub.com.br
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: ssl-https-credential
      mode: SIMPLE
